# topo-lang

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: TopoLangCompilerFlags.cmake  topo-langConfig.cmake.in
docs/: directory-convention.md  plugin-guide.md
examples/minimal-plugin/: CMakeLists.txt  MinimalPlugin.cpp  MinimalPlugin.h  README.md
include/topo/Lang/: BuildDriverFactory.h  CheckRunnerBase.h  EmitterFactory.h  InitTemplateProvider.h  LanguagePlugin.h
lib/: CMakeLists.txt  CheckRunnerBase.cpp  LanguagePlugin.cpp
test/: CMakeLists.txt
test/unit/: BuildDriverFactoryTest.cpp  CheckRunnerBaseTest.cpp  EmitterFactoryTest.cpp  InitTemplateProviderTest.cpp  RegistryTest.cpp
